--- a/search.html
+++ b/search.html
@@ -1,11 +1,3 @@
----
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
-layout: home
----
-
-
 <!-- Html Elements for Search -->
 <style>
   #search-container input {
@@ -21,15 +13,18 @@ layout: home
   </div>
   
   <!-- Script pointing to search-script.js -->
-  <script src="./assets/js/search-script.js" type="text/javascript"></script>
+  <script src="/assets/js/search-script.js" type="text/javascript"></script>
   
   <!-- Configuration -->
   <script>
   SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
     resultsContainer: document.getElementById('results-container'),
-    json: '/search.json'
+    json: '/search.json',
+    searchResultTemplate: '<div><a href="{url}"><h1>{title}</h1></a><span>{date}</span></div>',
+    noResultsText: ("No result found!")
   })
   </script>
+
   <!-- End of search -->
   
